--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,9 @@ android {
         applicationId "creativedays.com.dilzas"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 16
-        versionName "1.5.5"
+        versionCode 17
+        versionName "1.5.6"
+        multiDexEnabled true //Add this
         manifestPlaceholders = [onesignal_app_id: "88d07b1c-e63f-4e7f-9f94-eca70c0a82b1",
                                 // Project number pulled from dashboard, local value is ignored.
                                 onesignal_google_project_number: "696542288647"]
@@ -30,27 +31,23 @@ repositories {
     maven { url "https://jitpack.io" }
     maven { url "https://github.com/jwkelso/android-maven/raw/master/" }
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile files('libs/commons-lang3-3.4.jar')
-    compile 'com.android.support:appcompat-v7:27.0.2'
-    compile 'com.flaviofaria:kenburnsview:1.0.7'
-    compile 'com.android.support:design:27.0.2'
-    compile 'com.yayandroid:ParallaxRecyclerView:1.1'
-    compile 'com.yqritc:recyclerview-flexibledivider:1.4.0'
-    compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
-    compile 'com.jameskelso:pinch-to-zoom-imageview:1.0.0'
-    compile 'com.android.support:support-v4:27.0.2'
-    compile 'com.android.support:cardview-v7:27.0.2'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.github.nirhart:parallaxscroll:1.0'
-    compile 'com.squareup.okhttp3:okhttp:3.8.0'
-    compile 'com.onesignal:OneSignal:3.+@aar'
-    compile 'com.google.android.gms:play-services-gcm:+'
-    compile 'com.github.gabrielemariotti.recyclerview:recyclerview-animators:0.3.0-SNAPSHOT@aar'
-
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation files('libs/commons-lang3-3.4.jar')
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.flaviofaria:kenburnsview:1.0.7'
+    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.yayandroid:ParallaxRecyclerView:1.1'
+    implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
+    implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+    implementation 'com.jameskelso:pinch-to-zoom-imageview:1.0.0'
+    implementation 'com.android.support:support-v4:27.1.0'
+    implementation 'com.android.support:cardview-v7:27.1.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.nirhart:parallaxscroll:1.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.0'
+    implementation 'com.google.android.gms:play-services:12.0.1'
+    implementation 'com.onesignal:OneSignal:3.11.2'
 }
